--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ################################# Default configuration ###################
-baseURL = "https://examplesite.com"
+baseURL = "https://macmachinatechnology.com"
 title = "Meghna"
 theme = "meghna-hugo"
 themesDir = "../.."
